force-app/main/default/objects/Transaction_Order_Status_Config__mdt/Transaction_Order_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Transaction order&apos;s status configuration.</description>
    <label>Transaction Order Status Config</label>
    <pluralLabel>Transaction Order Status Config</pluralLabel>
</CustomObject>