force-app/main/default/objects/Transaction_Order_Status_Config__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The API value for the status picklist option.</description>
    <inlineHelpText>The API value for the status picklist option.</inlineHelpText>
    <label>Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>