force-app/main/default/objects/Transaction_Order_Status_Config__mdt/fields/Study_Voucher_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Voucher_Transaction_Status__c</fullName>
    <description>The Study Voucher Transaction status that should be updated when the Transaction Order status changes.</description>
    <label>Study Voucher Transaction Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>