force-app/main/default/objects/Transaction_Order_Status_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Study_Voucher_Transaction_Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>